--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     </style>
   </head>
   <body>
+    <header>
     <!-- Navbar -->
     <nav class="w3-top">
       <div class="w3-bar w3-flat-pumpkin w3-card">
@@ -128,7 +129,8 @@
         >Previous project</a
       >
     </nav>
-
+</header>
+    
     <!-- Page content -->
     <div class="w3-content" style="max-width: 2000px; margin-top: 46px">
       <!-- Banner -->
